--- a/src/index.css
+++ b/src/index.css
@@ -46,4 +46,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: aliceblue;
+  font-size: 50px;
+  color: #FF66CC;
 }
